Updated readme and created a python script that archives the dist folder as a zip file. Now where to put that?

--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,9 @@ cmake_install.cmake
 .vscode/*
 obj/*
 bin/*
+
 !obj/.gitkeep
 !bin/.gitkeep
+
+# headers in dist are just a copy of outside headers
+dist/*.hpp
