--- a/shapegame.vcxproj.filters
+++ b/shapegame.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="deps\getopt.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="deps\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -131,12 +128,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="deps\getopt.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="deps\linmath.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="deps\gl\glcorearb.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -144,15 +135,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="deps\khr\khrplatform.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="deps\mingw\dinput.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="deps\mingw\xinput.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="deps\mingw\_mingw_dxhelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\CollisionList.hpp">
@@ -281,14 +263,11 @@
     <ClInclude Include="tests\include\catch.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="deps\glfw\include\GLFW\glfw3.h">
+    <ClInclude Include="deps\GLFW\glfw3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="deps\glfw\include\GLFW\glfw3native.h">
+    <ClInclude Include="deps\GLFW\glfw3native.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <CopyFileToFolders Include="deps\glfw\lib\win\glfw3.dll" />
   </ItemGroup>
 </Project>
