Updated build configuration for windows

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,15 +11,15 @@ pool:
 
 variables:
   solution: '**/*.sln'
-  buildPlatform: 'Any CPU'
+  buildPlatform: 'x64'
   buildConfiguration: 'Release'
 
 steps:
-- task: NuGetToolInstaller@1
+#- task: NuGetToolInstaller@1
 
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
+#- task: NuGetCommand@2
+#inputs:
+#restoreSolution: '$(solution)'
 
 - task: VSBuild@1
   inputs:
@@ -27,7 +27,7 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
-- task: VSTest@2
-  inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+#- task: VSTest@2
+#inputs:
+#platform: '$(buildPlatform)'
+#configuration: '$(buildConfiguration)'
