Updated azure yaml file

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,8 @@ jobs:
   #restoreSolution: '$(solution)'
 
   - task: Bash@3
-    script: 'echo Hello world!'
+    inputs:
+      script: 'echo Hello world!'
 
   #- task: VSTest@2
   #inputs:
@@ -77,4 +78,5 @@ jobs:
   #restoreSolution: '$(solution)'
 
   - task: Bash@3
-    script: 'echo Goodbye world!'
+    inputs:
+      script: 'echo Goodbye world!'
