--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,6 +77,7 @@ jobs:
   #inputs:
   #restoreSolution: '$(solution)'
 
-  - task: Bash@3
-    inputs:
-      script: 'echo Goodbye world!'
+  - bash: 'echo hello world'
+  # - task: Bash@3
+  #   inputs:
+  #     script: 'echo Goodbye world!'
