Updated azure yaml file

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,13 +45,23 @@ jobs:
     buildConfiguration: 'Release'
 
   steps:
+  - task: DownloadBuildArtifacts@0
+    inputs:
+      buildType: 'current'
+      downloadType: 'single'
+      artifactName: 'drop'
+      downloadPath: '$(System.ArtifactsDirectory)'
+  #- task: VSTest@2
+  #inputs:
+  #platform: '$(buildPlatform)'
+  #configuration: '$(buildConfiguration)'
   #- task: NuGetToolInstaller@1
 
   #- task: NuGetCommand@2
   #inputs:
   #restoreSolution: '$(solution)'
 
-  - bash: 'echo goodbye world'
+  - bash: 'ls $(System.ArtifactsDirectory)'
 
 - job: Mac
 
