--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,80 +7,83 @@ trigger:
 
 stages:
 - stage: Windows
+  jobs:
+  - job: WindowsJob
 
-  pool:
-    vmImage: 'windows-latest'
+    pool:
+      vmImage: 'windows-latest'
 
-  variables:
-    solution: '**/*.sln'
-    buildPlatform: 'x64'
-    buildConfiguration: 'Release'
+    variables:
+      solution: '**/*.sln'
+      buildPlatform: 'x64'
+      buildConfiguration: 'Release'
 
-  steps:
-  #- task: NuGetToolInstaller@1
+    steps:
+    #- task: NuGetToolInstaller@1
 
-  #- task: NuGetCommand@2
-  #inputs:
-  #restoreSolution: '$(solution)'
+    #- task: NuGetCommand@2
+    #inputs:
+    #restoreSolution: '$(solution)'
 
-  - task: VSBuild@1
-    inputs:
-      solution: '$(solution)'
-      platform: '$(buildPlatform)'
-      configuration: '$(buildConfiguration)'
+    - task: VSBuild@1
+      inputs:
+        solution: '$(solution)'
+        platform: '$(buildPlatform)'
+        configuration: '$(buildConfiguration)'
 
-  #- task: VSTest@2
-  #inputs:
-  #platform: '$(buildPlatform)'
-  #configuration: '$(buildConfiguration)'
+    #- task: VSTest@2
+    #inputs:
+    #platform: '$(buildPlatform)'
+    #configuration: '$(buildConfiguration)'
 
 - stage: Linux
+  - job: LinuxJob
 
-  pool:
-    vmImage: 'ubuntu-latest'
+    pool:
+      vmImage: 'ubuntu-latest'
 
-  variables:
-    solution: '**/*.sln'
-    buildPlatform: 'x64'
-    buildConfiguration: 'Release'
+    variables:
+      solution: '**/*.sln'
+      buildPlatform: 'x64'
+      buildConfiguration: 'Release'
 
-  steps:
-  - task: DownloadBuildArtifacts@0
-    inputs:
-      buildType: 'current'
-      downloadType: 'single'
-      artifactName: 'drop'
-      downloadPath: '$(System.ArtifactsDirectory)'
-  #- task: VSTest@2
-  #inputs:
-  #platform: '$(buildPlatform)'
-  #configuration: '$(buildConfiguration)'
-  #- task: NuGetToolInstaller@1
+    steps:
+    - task: DownloadBuildArtifacts@0
+      inputs:
+        buildType: 'current'
+        downloadType: 'single'
+        artifactName: 'drop'
+        downloadPath: '$(System.ArtifactsDirectory)'
+    #- task: VSTest@2
+    #inputs:
+    #platform: '$(buildPlatform)'
+    #configuration: '$(buildConfiguration)'
+    #- task: NuGetToolInstaller@1
 
-  #- task: NuGetCommand@2
-  #inputs:
-  #restoreSolution: '$(solution)'
+    #- task: NuGetCommand@2
+    #inputs:
+    #restoreSolution: '$(solution)'
 
-  - bash: 'ls $(System.ArtifactsDirectory)'
-
+    - bash: 'ls $(System.ArtifactsDirectory)'
 - stage: Mac
+  - job: MacJob
 
-  pool:
-    vmImage: 'macOS-10.13'
+    pool:
+      vmImage: 'macOS-10.13'
 
-  variables:
-    solution: '**/*.sln'
-    buildPlatform: 'x64'
-    buildConfiguration: 'Release'
+    variables:
+      solution: '**/*.sln'
+      buildPlatform: 'x64'
+      buildConfiguration: 'Release'
 
-  steps:
-  #- task: NuGetToolInstaller@1
+    steps:
+    #- task: NuGetToolInstaller@1
 
-  #- task: NuGetCommand@2
-  #inputs:
-  #restoreSolution: '$(solution)'
+    #- task: NuGetCommand@2
+    #inputs:
+    #restoreSolution: '$(solution)'
 
-  - bash: 'echo hello world'
-  # - task: Bash@3
-  #   inputs:
-  #     script: 'echo Goodbye world!'
+    - bash: 'echo hello world'
+    # - task: Bash@3
+    #   inputs:
+    #     script: 'echo Goodbye world!'
