--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@ trigger:
 - master
 
 stages:
-- stage: Windows
+- stage: Build
   jobs:
   - job: WindowsBuild
 
@@ -40,9 +40,6 @@ stages:
     #inputs:
     #platform: '$(buildPlatform)'
     #configuration: '$(buildConfiguration)'
-
-- stage: Linux
-  jobs:
   - job: LinuxBuild
 
     pool:
@@ -64,8 +61,7 @@ stages:
 
 
     - bash: 'ls $(System.ArtifactsDirectory)'
-- stage: Mac
-  jobs:
+
   - job: MacBuild
 
     pool:
@@ -87,3 +83,15 @@ stages:
     # - task: Bash@3
     #   inputs:
     #     script: 'echo Goodbye world!'
+
+- stage: PackageAndDeploy
+  jobs:
+  - job: PackageAndDeployJob
+    pool:
+      vmImage: 'macOS-10.13'
+    variables:
+      solution: '**/*.sln'
+      buildPlatform: 'x64'
+      buildConfiguration: 'Release'
+    steps:
+    - bash: 'echo hello world'
