--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,67 +31,64 @@ stages:
         platform: '$(buildPlatform)'
         configuration: '$(buildConfiguration)'
        
-    - powershell: 'ls $(System.DefaultWorkingDirectory)\bin'
+    - powershell: 'ls $(System.DefaultWorkingDirectory)'
 
     # - publish: $(System.DefaultWorkingDirectory)/bin/
     #   artifact: WindowsBinaries
 
-    #- task: VSTest@2
-    #inputs:
-    #platform: '$(buildPlatform)'
-    #configuration: '$(buildConfiguration)'
-  - job: LinuxBuild
 
-    pool:
-      vmImage: 'ubuntu-latest'
+#   - job: LinuxBuild
 
-    variables:
-      solution: '**/*.sln'
-      buildPlatform: 'x64'
-      buildConfiguration: 'Release'
+#     pool:
+#       vmImage: 'ubuntu-latest'
 
-    steps:
+#     variables:
+#       solution: '**/*.sln'
+#       buildPlatform: 'x64'
+#       buildConfiguration: 'Release'
 
-    # - task: DownloadBuildArtifacts@0
-    #   inputs:
-    #     buildType: 'current'
-    #     downloadType: 'single'
-    #     artifactName: 'drop'
-    #     downloadPath: '$(System.ArtifactsDirectory)'
+#     steps:
+
+#     # - task: DownloadBuildArtifacts@0
+#     #   inputs:
+#     #     buildType: 'current'
+#     #     downloadType: 'single'
+#     #     artifactName: 'drop'
+#     #     downloadPath: '$(System.ArtifactsDirectory)'
 
 
-    - bash: 'ls $(System.ArtifactsDirectory)'
+#     - bash: 'ls $(System.ArtifactsDirectory)'
 
-  - job: MacBuild
+#   - job: MacBuild
 
-    pool:
-      vmImage: 'macOS-10.13'
+#     pool:
+#       vmImage: 'macOS-10.13'
 
-    variables:
-      solution: '**/*.sln'
-      buildPlatform: 'x64'
-      buildConfiguration: 'Release'
+#     variables:
+#       solution: '**/*.sln'
+#       buildPlatform: 'x64'
+#       buildConfiguration: 'Release'
 
-    steps:
-    #- task: NuGetToolInstaller@1
+#     steps:
+#     #- task: NuGetToolInstaller@1
 
-    #- task: NuGetCommand@2
-    #inputs:
-    #restoreSolution: '$(solution)'
+#     #- task: NuGetCommand@2
+#     #inputs:
+#     #restoreSolution: '$(solution)'
 
-    - bash: 'echo hello world'
-    # - task: Bash@3
-    #   inputs:
-    #     script: 'echo Goodbye world!'
+#     - bash: 'echo hello world'
+#     # - task: Bash@3
+#     #   inputs:
+#     #     script: 'echo Goodbye world!'
 
-- stage: PackageAndDeploy
-  jobs:
-  - job: PackageAndDeployJob
-    pool:
-      vmImage: 'macOS-10.13'
-    variables:
-      solution: '**/*.sln'
-      buildPlatform: 'x64'
-      buildConfiguration: 'Release'
-    steps:
-    - bash: 'echo hello world'
+# - stage: PackageAndDeploy
+#   jobs:
+#   - job: PackageAndDeployJob
+#     pool:
+#       vmImage: 'macOS-10.13'
+#     variables:
+#       solution: '**/*.sln'
+#       buildPlatform: 'x64'
+#       buildConfiguration: 'Release'
+#     steps:
+#     - bash: 'echo hello world'
