Updated azure pipelines yaml

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,62 +33,62 @@ stages:
        
     - powershell: 'ls $(System.DefaultWorkingDirectory)'
 
-    # - publish: $(System.DefaultWorkingDirectory)/bin/
-    #   artifact: WindowsBinaries
+    - publish: $(System.DefaultWorkingDirectory)\dist-libs\platform\win\shapegame.lib
+      artifact: WindowsBinaries
 
 
-#   - job: LinuxBuild
+  - job: LinuxBuild
 
-#     pool:
-#       vmImage: 'ubuntu-latest'
+    pool:
+      vmImage: 'ubuntu-latest'
 
-#     variables:
-#       solution: '**/*.sln'
-#       buildPlatform: 'x64'
-#       buildConfiguration: 'Release'
+    variables:
+      solution: '**/*.sln'
+      buildPlatform: 'x64'
+      buildConfiguration: 'Release'
 
-#     steps:
+    steps:
 
-#     # - task: DownloadBuildArtifacts@0
-#     #   inputs:
-#     #     buildType: 'current'
-#     #     downloadType: 'single'
-#     #     artifactName: 'drop'
-#     #     downloadPath: '$(System.ArtifactsDirectory)'
+    # - task: DownloadBuildArtifacts@0
+    #   inputs:
+    #     buildType: 'current'
+    #     downloadType: 'single'
+    #     artifactName: 'drop'
+    #     downloadPath: '$(System.ArtifactsDirectory)'
 
 
-#     - bash: 'ls $(System.ArtifactsDirectory)'
+    - bash: 'ls $(System.ArtifactsDirectory)'
 
-#   - job: MacBuild
+  - job: MacBuild
 
-#     pool:
-#       vmImage: 'macOS-10.13'
+    pool:
+      vmImage: 'macOS-10.13'
 
-#     variables:
-#       solution: '**/*.sln'
-#       buildPlatform: 'x64'
-#       buildConfiguration: 'Release'
+    variables:
+      solution: '**/*.sln'
+      buildPlatform: 'x64'
+      buildConfiguration: 'Release'
 
-#     steps:
-#     #- task: NuGetToolInstaller@1
+    steps:
+    #- task: NuGetToolInstaller@1
 
-#     #- task: NuGetCommand@2
-#     #inputs:
-#     #restoreSolution: '$(solution)'
+    #- task: NuGetCommand@2
+    #inputs:
+    #restoreSolution: '$(solution)'
 
-#     - bash: 'echo hello world'
-#     # - task: Bash@3
-#     #   inputs:
-#     #     script: 'echo Goodbye world!'
+    - bash: 'echo hello world'
+    # - task: Bash@3
+    #   inputs:
+    #     script: 'echo Goodbye world!'
 
-# - stage: PackageAndDeploy
-#   jobs:
-#   - job: PackageAndDeployJob
-#     pool:
-#       vmImage: 'macOS-10.13'
-#     variables:
-#       solution: '**/*.sln'
-#       buildPlatform: 'x64'
-#       buildConfiguration: 'Release'
-#     steps:
-#     - bash: 'echo hello world'
+- stage: PackageAndDeploy
+  jobs:
+  - job: PackageAndDeployJob
+    pool:
+      vmImage: 'macOS-10.13'
+    variables:
+      solution: '**/*.sln'
+      buildPlatform: 'x64'
+      buildConfiguration: 'Release'
+    steps:
+    - bash: 'echo hello world'
