--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ stages:
     steps:
     - script: 'make -j5 dist-linux'
 
-    - publish: $(System.DefaultWorkingDirectory)\dist-libs\platform\linux\shapegame.a
+    - publish: $(System.DefaultWorkingDirectory)/dist-libs/platform/linux/shapegame.a
       artifact: LinuxBinary
 
     # - task: DownloadBuildArtifacts@0
