--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,14 +77,20 @@ stages:
     - publish: $(System.DefaultWorkingDirectory)/dist-libs/platform/mac/shapegame.a
       artifact: MacBinary
 
-# - stage: PackageAndDeploy
-#   jobs:
-#   - job: PackageAndDeployJob
-#     pool:
-#       vmImage: 'macOS-10.13'
-#     variables:
-#       solution: '**/*.sln'
-#       buildPlatform: 'x64'
-#       buildConfiguration: 'Release'
-#     steps:
-#     - bash: 'echo hello world'
+- stage: PackageAndDeploy
+  jobs:
+  - job: PackageAndDeployJob
+    pool:
+      vmImage: 'macOS-10.13'
+    variables:
+      solution: '**/*.sln'
+      buildPlatform: 'x64'
+      buildConfiguration: 'Release'
+    steps:
+    - task: DownloadBuildArtifacts@0
+      inputs:
+        buildType: 'current'
+        downloadType: 'single'
+        artifactName: 'drop'
+        downloadPath: '$(System.ArtifactsDirectory)'
+    - bash: 'ls $(System.ArtifactsDirectory)'
